old/google-cloud/2-google-manged-ssl/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: hello-server-nodeport
spec:
    type: NodePort
    selector:
        app: hello-server
    ports:
        - name: hello-server-port
          protocol: TCP
          port: 80
          targetPort: 8080
